@@ -18,7 +18,7 @@
  - PERFORMANCE OF THIS SOFTWARE.
 -->
 
-<!-- File: $Id: Bv9ARM-book.xml,v 1.155.2.27.2.59 2005/10/10 00:22:24 marka Exp $ -->
+<!-- File: $Id: Bv9ARM-book.xml,v 1.155.2.27.2.59.4.1 2006/06/04 23:33:26 marka Exp $ -->
 
 <book>
 <title>BIND 9 Administrator Reference Manual</title>
@@ -2770,6 +2770,7 @@ statement in the <filename>named.conf</filename> file:</para>
     <optional> allow-transfer { <replaceable>address_match_list</replaceable> }; </optional>
     <optional> allow-recursion { <replaceable>address_match_list</replaceable> }; </optional>
     <optional> allow-update-forwarding { <replaceable>address_match_list</replaceable> }; </optional>
+    <optional> try-tcp-refresh <replaceable>yes_or_no</replaceable>; </optional>
     <optional> allow-v6-synthesis { <replaceable>address_match_list</replaceable> }; </optional>
     <optional> blackhole { <replaceable>address_match_list</replaceable> }; </optional>
     <optional> avoid-v4-udp-ports { <replaceable>port_list</replaceable> }; </optional>
@@ -3403,6 +3404,16 @@ indicated that it is a reverse lookup of a hostname (the owner name ends in
 IN-ADDR.ARPA, IP6.ARPA, IP6.INT).
 </para>
 </listitem></varlistentry>
+
+	    <varlistentry>
+	      <term><command>try-tcp-refresh</command></term>
+	      <listitem>
+		<para>
+		  Try to refresh the zone using TCP if UDP queries fail.
+		  The default is <command>yes</command>.
+		</para>
+	      </listitem>
+	    </varlistentry>
 
 </variablelist>
 
@@ -4599,6 +4610,7 @@ Statement Grammar</title>
     <optional> allow-update { <replaceable>address_match_list</replaceable> } ; </optional>
     <optional> update-policy { <replaceable>update_policy_rule</replaceable> <optional>...</optional> } ; </optional>
     <optional> allow-update-forwarding { <replaceable>address_match_list</replaceable> } ; </optional>
+    <optional> try-tcp-refresh <replaceable>yes_or_no</replaceable>; </optional>
     <optional> also-notify { <replaceable>ip_addr</replaceable> <optional>port <replaceable>ip_port</replaceable></optional> ; <optional> <replaceable>ip_addr</replaceable> <optional>port <replaceable>ip_port</replaceable></optional> ; ... </optional> }; </optional>
     <optional> check-names (<constant>warn</constant>|<constant>fail</constant>|<constant>ignore</constant>) ; </optional>
     <optional> dialup <replaceable>dialup_option</replaceable> ; </optional>
@@ -4818,6 +4830,16 @@ network.  The default varies according to zone type.  For <command>master</comma
 zones the default is <command>warn</command>.
 </para>
 </listitem></varlistentry>
+
+	      <varlistentry>
+		<term><command>try-tcp-refresh</command></term>
+		  <listitem>
+		    <para>
+		      See the description of
+		      <command>try-tcp-refresh</command> in <xref linkend="boolean_options"/>.
+		    </para>
+		  </listitem>
+		</varlistentry>
 
 <varlistentry><term><command>database</command></term>
 <listitem><para>Specify the type of database to be used for storing the
